seminar report structure mod1

--- a/report/document.tex
+++ b/report/document.tex
@@ -127,7 +127,7 @@ CONCLUSION, IF ANY.
 FUTURE WORK, IF ANY
 
 \newpage
-\begin{thebibliography}{9}
+\begin{thebibliography}
       
 \bibitem{paperauthor1}
 Humble R W, Henry G N and Larson W J (1995), \emph{Space propulsion analysis and design}, McGraw-Hill, Inc., ISBN-0-07-
@@ -137,10 +137,6 @@ Humble R W, Henry G N and Larson W J (1995), \emph{Space propulsion analysis and
 Author First, Author Second \emph{Title of the paper} Name of Journal Page-numbers,
 Month Year.
 
-\bibitem{AnotherExamplePaper}
-Sadeghi, M., Yang, S., Liu, F., and Tsai, H. M., \emph{Parallel Computation
-of Wing Flutter with a Coupled Navier–Stokes and CSD Method}
-AIAA Paper 2003-1347, 2003.
 
 \end{thebibliography}
 
