--- a/report/frontpages.tex
+++ b/report/frontpages.tex
@@ -45,7 +45,7 @@ textheight=8.75in
 
 
 \begin{center}
-\includegraphics[scale=0.8]{logoblack.png}
+\includegraphics[scale=0.2]{logoblack.png}
 \end{center}
 
 
@@ -93,7 +93,7 @@ Place:
 \\
 \end{center}
 \vskip 0.2in
-{\fontsize{25}{26.4}\selecfont {First of all, I am very thankful to my institute  K.K.Wagh Institute of Engineering Education & Research - KKWIEER  for providing me a wonderful opportunity to work towards this seminar report. Secondly, I am very thankful to my mentor Mr. XYZ for guiding me during each step of seminar execution work. I am grateful of my subject teachers and parents for their guidence and support throughout the learning period.
+{\fontsize{25}{26.4}\selecfont {First of all, I am very thankful to my institute  K.K.Wagh Institute of Engineering Education & Research - KKWIEER  for providing me a wonderful opportunity to work towards this seminar report. Secondly, I am very thankful to my mentor Prof. Rahul Rakhade for guiding me during each step of seminar execution work. I am grateful of my subject teachers and parents for their guidence and support throughout the learning period.
 \vskip 0.3in
 I am also thankful to Dr. PQR from Mechanical Engineering Departments, and Prof, ABC from GHI,India for guiding me towards the blahblah blahblah blahblah blahblah blahblah .}  
 
